--- a/5.10.css
+++ b/5.10.css
@@ -7,6 +7,8 @@ body {
     font: 85px arial, sans-serif;
     margin: 3px;
     
+    /* TODO: Add your solution here */      
+ 
  }
  
  #board > div {
